[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widget-bandsplot"
version = "0.6.0"
dependencies = [
  "anywidget~=0.9.3"
]
readme = "README.md"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/widget_bandsplot/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/widget_bandsplot/static/widget.js"]
skip-if-exists = ["src/widget_bandsplot/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
