[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widget-bandsplot"
description = 'A Jupyter widget to plot band structure and density of states.'
version = "0.7.1"
dependencies = ["anywidget~=0.9.10"]
authors = [{ name = "The OSSCAR team" }]
readme = "README.md"
keywords = [
  'jupyter',
  'jupyterlab',
  'widget',
  'anywidget',
  'osscar',
  'electronic-structure',
  'phonons',
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
]
license = { file = 'LICENSE.txt' }
requires-python = '>=3.9'

[project.urls]
Home = 'https://www.osscar.org/'
Source = 'https://github.com/osscar-org/widget-bandsplot'

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab", "notebook", "bumpver>=2023.1129"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/widget_bandsplot/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/widget_bandsplot/static/widget.js"]
skip-if-exists = ["src/widget_bandsplot/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.bumpver]
current_version = "v0.7.1"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  'version = "{pep440_version}"',
  'current_version = "{version}"',
]
