[metadata]
name = widget-bandsplot
author = Dou Du, Jusong Yu
author_email=aiidalab@materialscloud.org
version = attr: widget_bandsplot.version.__version__
description = Package for bandsplot widget
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/widget-bandsplot
keywords = ipython, widgets, Jupyter, JupyterLab, JupyterLab3, AiiDA
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
project_urls =
    Bug Tracker = https://github.com/osscar-org/widget-bandsplot/issues
    Documentation = https://github.com/osscar-org/widget-bandsplot#readme

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    matplotlib~=3.5
    ipympl~=0.9
    ipywidgets~=7.7
    numpy~=1.21
    jsonschema~=3.2
    traitlets~=5.3
python_requires = >=3.8

[options.extras_require]
dev =
    pre-commit~=2.11
    pylint~=2.14

tests =
    pytest~=7.1
    selenium~=4.1

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.

[bumpver]
current_version = "v0.4.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
widget_bandsplot/version.py =
    __version__ = "{pep440_version}"
setup.cfg =
    current_version = "{version}"
